# ArrowAnalysis

./: CMakeLists.txt  README.md  arrow_custom_kernel.cpp  arrow_eval.cpp  arrow_testing.cpp  measure.sh  plot.r
build_/: measurements_1024_50.json  measurements_128_50.json  measurements_131072_50.json  measurements_16384_50.json  measurements_16_50.json  measurements_2048_50.json  measurements_256_50.json  measurements_262144_50.json  measurements_32768_50.json  measurements_32_50.json  measurements_4096_50.json  measurements_512_50.json  measurements_524288_50.json  measurements_64_50.json  measurements_65536_50.json  measurements_8192_50.json
